** (2012-11-01) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Drop Ganeti docs, focus on KVM only for now
	- Start with MySQL doc

** (2012-08-17) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Information about Postfix mailinfrastructure

** (2012-08-16) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Finish certificate chapter, start working on database chapter
	- Dropped JBoss for now (EJBCA was the driver for it, but EJBCA 
	  doesn't seem to be easily manageable whereas the plain openssl
	  commands do).
	- Start working on mail infrastructure chapter

** (2012-05-13) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Drop references to security benchmark, too little time :-(

** (2012-04-22) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update on JBoss

** (2012-04-21) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Start on NFSv4

** (2012-04-20) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Use diagram.ly drawings from now on
	- Update on BIND and certificate management

** (2012-04-14) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update DNS (BIND), update on IPv6-specifics
	- Revert DHCP back to a "normal" setup, failover in IPv6 is not
	  supported yet
	- Start writing up on certificates

** (2012-04-12) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Adding some images and architecturing information
	- Add information on DHCP

** (2012-04-11) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Added info on BIND

** (2012-04-10) Sven Vermeulen <sven.vermeulen@siphos.be>
	- More info regarding virtualization
	- Start networking services (small explanation on IPv6)

** (2012-04-07) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update on build server, restructure

** (2012-04-05) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Initial push